# DataDebat

./: .gitignore  README.md  batch_load_report.json  commandes_git.md  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt  test_con.py  test_intervention_with_word.py  todo.md
notebooks/: data_exploration.ipynb  get_raw_data.ipynb  send_to_elasticsearch.ipynb  view_sentiments_data copy.ipynb  view_sentiments_data.ipynb  view_sentiments_data_group.ipynb
overton_assemblee/config/: settings.yaml
overton_assemblee/notebooks/: Overton_results.ipynb  overton_detector_spacy.py  test1.py
results/: overton_analysis.json
src/: config.py  extract.py  load.py  load_batch.py  monitoring.py  orchestrator.py  test_data.ipynb  test_intervention_count.py  var.py
src/analysis/: analyse_bert.py  embeddings_sentence.py  positivity_evolution.py  sentence_embeding.py  simon_test.py  view_sentiments_data.ipynb  word_embeding.py
src/db/: es_connection.py
src/etl/: config.py  extract.py  load_batch.py  monitoring.py  orchestrator.py  transform.py
tests/: batch_test.py  check_duplicates.py  comparaison_idsyceron.json  count_words_in_file.py  doublons_rapport.json  som_ex1.xml  sommaire_vs_transform.py  sommaire_vs_transformed.py  taz_to_es_test.py  test_sentiment.py
